--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Fran puto</title>
     <meta charset="utf-8">
     <link href="prueba.css" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" href="C:\Users\dossa\OneDrive\Escritorio\caraenojada.jpg">   
+    <link rel="shortcut icon" href="../caraenojada.jpg" alt="La imagen no se encontró">   
 </head>
 <body>
 <h1>Fran no deberia estar en el grupo</h1>
@@ -49,6 +49,6 @@
 
 
 </p>
-<img src="C:\Users\dossa\OneDrive\Escritorio\fotoprueba.jpg">
+<img src="https://previews.123rf.com/images/ljupco/ljupco1708/ljupco170800050/83589889-m%C3%BAsico-tocando-una-trompeta-aislada-sobre-fondo-blanco.jpg" alt="La imagen no se encontró" width="500" height="400">
 </body>
 </html>
