--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Fran puto</title>
     <meta charset="utf-8">
     <link href="prueba.css" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" href="../caraenojada.jpg" alt="La imagen no se encontró">   
+    <link rel="shortcut icon" href="https://images.vexels.com/media/users/3/168452/isolated/preview/04704f78da8afaa283d99244fafdc05c-plano-de-rayas-de-corazon-transgenero.png" alt="La imagen no se encontró">   
 </head>
 <body>
 <h1>Fran no deberia estar en el grupo</h1>
