--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 
 
 </p>
-<img src="https://previews.123rf.com/images/ljupco/ljupco1708/ljupco170800050/83589889-m%C3%BAsico-tocando-una-trompeta-aislada-sobre-fondo-blanco.jpg" alt="La imagen no se encontró" width="500" height="400">
+<h3>
+    Imagenes representativas
+</h3>
+<img src="https://th.bing.com/th/id/OIP.TGVAXwggp6qgdTwo1dysnwAAAA?pid=ImgDet&rs=1" width="200" height="400">
+<img src="https://th.bing.com/th/id/OIP.wubuvGMTVvVR783NXw2vFwAAAA?pid=ImgDet&rs=1" height="400"> 
 </body>
 </html>
